--- a/estilos.css
+++ b/estilos.css
@@ -1,56 +1,17 @@
-.header__logoyslogan {
-    
-    width: 1250px;
-    height: 250px;
-    background-image: url(Header2.jpeg); width: 100%;
-    text-align: center;
-    font-family: 'Signika', sans-serif;
-    
-
-}
 
 body {
-
-
-
-
-    
+ 
     background-color: grey;
     background-image: url(9570.jpg);
     background-size: cover;
     
 
 }
-
-
-h1 {
-    font-family: 'Dancing Script', cursive; 
-    color: peru;
-    -webkit-text-stroke: 0.002px black;
-     font-size: 50px;
-}
-
-h2 {
-    -webkit-text-stroke: 1px black;
-    font-family: 'Baloo Tammudu 2', cursive;
-    color: wheat;
-   
-    
-
-}
-
-i {
-    font-family: 'Baloo Tammudu 2', cursive;
-    -webkit-text-stroke: 0.5px black;
-    font-size: 20px;
-    color: wheat;
-}
 .divPadre{
     display:flex ;
     flex-direction: column;
     justify-content: center;
 }
-
 .section__centrado {
     margin-bottom: 40px;
     display: flex;
@@ -59,31 +20,25 @@ i {
     font-family: 'Signika', sans-serif;
     color: grey;
 }
-
 .link {
     font-family: 'Signika', sans-serif;
     list-style: none;
     text-decoration: none;
     color: peru;
+    font-size: 16px;
     
 }
 .link:hover{
     background-color: burlywood;
     text-decoration: none;
-    color: white
+    color: white;
+    border-radius: 1px;
+
     
 }
-
 form {
     font-family: 'Signika', sans-serif;
 
-}
-.divmen{
-    background-color: rgba(0,0,0,0.8);
-    width: 1250px;
-    height: 25px;
-    padding-top: 7px;
-    padding-bottom: 2.5px;
 }
 .section__div--redes {
     display: flex;
@@ -116,14 +71,12 @@ form {
     border-radius: 10px;
     text-align: center;
 }
-  
-.section__div--Qs:hover {
+  .section__div--Qs:hover {
     transform: scale(1.1);
     
 }
 .carousel-inner { text-align: center; }
 .carousel .item > img { display: inline-block; }
-
 .section__div--DE {
     background-color: rgba(0,0,0,0.8); 
     margin-left: 275px;
@@ -136,40 +89,83 @@ form {
     transition: all 3s;
     border-radius: 10px;
 }
-
 .section__div--DE:hover {
     transform: scale(1.1);
 
 }
+.section__div--NP { 
+    background-color: rgba(0,0,0,0.8); 
+    margin-left: 275px;
+    margin-right: 270px;
+    padding-top: 1px;
+    padding-bottom: 2px;
+    padding-left: 5px;
+    padding-right: 5px;
+    margin-bottom: 10px;
+    transition: all 3s;
+    border-radius: 10px;
 
-nav{
-    
+}
+.section__div--NP:hover {
+    transform: scale(1.1);
+
+}
+.nav__div--Padrisimo {
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
+    align-items: center;
+
+}
+nav{
+    width: 100vw;
+    display: flex;
     flex-wrap: nowrap;
-    background-color: rgba(0,0,0,0.8);
-    justify-content: space-between;
+    background-color: black;
     font-family: 'Signika', sans-serif;
+    z-index: 1;
+    
     
 }
 nav div div a{
     padding-top: 5.5px;
     padding-bottom: 5px;
     font-size: 14px;
-    
+    color: peru;
    
   
 }
+.nav__main{
+    position: sticky;
+    top: 0; 
+}
 nav a:hover{
-    background-color: burlywood;
-    text-decoration: none;
+
+    text-decoration: none; 
+    border-radius: 2px;
+    border-top: solid 2px white;
+    border-bottom: solid 2px white;
+    color: white
+    
+}
+.nav__div--Padre{
+    display: flex;
+    flex-direction: row;
+    margin-top: 30px;
 }
 .nav__div--menu{
+    
     display: flex;
+    align-items: center;
     flex-direction: row;
     margin-right: 25px;
     margin-left: 50px;
+    font-size: 18px;
 }
+.nav__div--Slogan {
+    margin-top: 20px;
+    color: white;
+   
+}      
 .grid {
     display: grid;
     padding-top: 20px;
@@ -182,8 +178,7 @@ nav a:hover{
     
 
 }
-
-.Promos {
+.Promos {   
     display: flex;
     border: 1px solid black;
     background-color: grey;
@@ -215,7 +210,8 @@ form {
     font-family: 'Signika', sans-serif;
     color: grey;
     justify-content: space-between ;
-    background-color:black
+    background-color:black;
+    width: 100vw;
 }
 .footer__div--redes{
     display: flex;
@@ -226,7 +222,38 @@ form {
    }
 .footer__divdiv--redes{
     margin-left: 7px;
-}   
+} 
+.sectio__prueba--fondo{
+    width: 100vw;
+    height: 79vh;
+    background-image: url(74.jpg);
+    background-size:cover;
+    display: flex;
+    flex-direction: row;
+    justify-content:center;
+    align-items: flex-end;
+   
+} 
+.animate__animated.animate__slideInDown{
+    --animate-duration:2s;
+}
+.div__transicion {
+    background-color:black;
+    width: 100vw;
+    display: flex;
+    justify-content: center;
+    color: white;
+    font-size: 18px;
+}
+.section__div--wp {
+    margin-right: 30px;
+    margin-bottom: 20px;
+    position: fixed;
+    right: 5px ;
+    bottom:350px;
+}
+
+
 /*MENÚ CON SUBMENÚ* /
 
 
